--- a/app/src/main/res/layout/deleted_item.xml
+++ b/app/src/main/res/layout/deleted_item.xml
@@ -8,9 +8,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableTop="@drawable/ic_delete_black_24dp"
+        android:drawableTop="@drawable/trash"
         android:text="@string/message_item_deleted"
         tools:text="@string/message_item_deleted"
+        style="@style/body1.text"
         android:layout_gravity="center"/>
 
 </FrameLayout>
