--- a/app/src/main/res/layout/fragment_announcement_details.xml
+++ b/app/src/main/res/layout/fragment_announcement_details.xml
@@ -180,6 +180,35 @@
                     app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
                     tools:text="@string/large_text" />
 
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/spacer1"
+                    android:background="@drawable/bg_line"
+                    android:layout_marginTop="@dimen/spacer4"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/description"/>
+
+                <com.google.android.gms.ads.AdView
+                    xmlns:ads="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/adView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentBottom="true"
+                    ads:adSize="BANNER"
+                    ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+                    android:layout_marginTop="@dimen/spacer4"
+                    app:layout_constraintStart_toStartOf="@id/title"
+                    app:layout_constraintLeft_toLeftOf="@id/title"
+                    app:layout_constraintEnd_toEndOf="@id/title"
+                    app:layout_constraintRight_toRightOf="@id/title"
+                    app:layout_constraintTop_toBottomOf="@id/divider">
+                </com.google.android.gms.ads.AdView>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </ScrollView>
