--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -129,6 +129,7 @@
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:src="@drawable/ic_photo_camera_black_24dp"
+                    android:contentDescription="@string/content_description_add_images"
                     android:layout_marginEnd="@dimen/spacer2"
                     android:layout_marginRight="@dimen/spacer2"
                     app:layout_constraintTop_toTopOf="@id/scrollView"
